src/test/deca/context/invalid/test_error_3.40-6.deca
// Description:
//    Soulève l'erreur (3.40) : le instanceof
//
// Resultats:
//    Erreur contextuelle
//    Ligne 11 : les types "class_type_A" et "void" sont incompatibles (règle 3.40)
//
// Historique:
//      cree le 06/01/2022

class A {
    void m() {
    }
}

{   
    boolean b;
    A a = new A();
    b = a.m() instanceof A;
}

